--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 # ok cool je fait quand meme 
 .idea/
+
+# sublime text
+*.sublime-*
